Got a graphical interface to open
Not connected with application functionality yet.