@@ -1,4 +1,4 @@
 #!/bin/bash
 ./make.sh
 echo "Running Daily Logger!"
-java -cp target/classes:lib/jaco-mp3-player-0.9.3.jar main 
+java -cp target/classes --module-path "/Users/runar/programming/library/javafx-sdk-11.0.1/lib/" --add-modules=javafx.controls,javafx.fxml main 
