@@ -1,3 +1,3 @@
 #!/bin/bash
 echo "Compiling Daily Logger project!"
-javac -cp ".:lib/jaco-mp3-player-0.9.3.jar" -sourcepath src/main/java -d target/classes src/main/java/main.java
+javac -cp "." --module-path "/Users/runar/programming/library/javafx-sdk-11.0.1/lib/" --add-modules=javafx.controls,javafx.fxml -sourcepath "src/main/java" -d "target/classes" src/main/java/main.java
